2001-01-06  Mark Kettenis  <kettenis@gnu.org>

	* sysdeps/mach/hurd/xstatconv.c (xstat64_conv): Don't forget to
	copy st_atime member.

2001-01-05  Ulrich Drepper  <drepper@redhat.com>

	* io/ftw.c (ftw_dir): Don't add a second slash at the beginning
	for searches from the root directory.
	Reported by loris <loris@iol.it> [PR libc/1991].
	* io/Makefile (tests): Add bug-ftw1.
	* io/bug-ftw1.c: New file.

	* elf/dl-support.c (non_dynamic_init): Don't define DL_FIND_AUXV
	if it is not available.  Instead use it only if it is available.
	* sysdeps/unix/sysv/linux/ldsodefs.h: New file.

	* iconv/gconv_simple.c (internal_ics4_loop): Correct test for
	overflowing output buffer.
	(internal_ucs4_loop_unaligned): Likewise.
	(ucs4_internal_loop): Likewise.
	(ucs4_internal_loop_unaligned): Likewise.
	(internal_ucs4le_loop): Likewise.
	(internal_ucs4le_loop_unaligned): Likewise.
	(ucs4le_internal_loop): Likewise.
	(ucs4le_internal_loop_unaligned): Likewise.
	Reported by Owen Taylor <otaylor@redhat.com>.
	* iconv/Makefile (tests): Add tst-iconv2.
	* iconv/tst-iconv2.c: New file.

2001-01-04  H.J. Lu  <hjl@gnu.org>

	* elf/dl-support.c (DL_FIND_AUXV): New.  Defined if not defined.
	(_dl_clktck): Declared.
	(non_dynamic_init): Take 3 arguments.
	Set _dl_pagesize, _dl_platform and _dl_clktck from AUX.

2001-01-01  Bruno Haible  <haible@clisp.cons.org>

	Finish implementation of plural form handling.
	* intl/dcigettext.c (known_translation_t): Rename 'domain' field to
	'domainname'.  Remove 'plindex' field. Add 'domain' and
	'translation_length' fields.
	(transcmp): Don't compare 'plindex' fields.
	(plural_lookup): New function.
	(DCIGETTEXT): Change cache handing in the plural case.  Don't call
	plural_eval before the translation and its catalog file have been
	found. Remove plindex from cache key.  Add 'translation_length' and
	'domain' to cache result.
	(_nl_find_msg): Remove index argument, return length of translation